--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
