--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "formik": "^2.4.6",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
